some backend bug fixes